gccida/g1/gen_split_957
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_957/src/insn-emit.c:8726:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_957/src/insn-emit.c:8727:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[3]); 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_957/src/obj/insn-emit.o] Error 1
